test/parsing/errors/enum-extra-comma.boa
# NO
type T1 = enum { A = "yes", B = "no", ,C = "maybe" };
